Moved the todo item view into a component with it's styles.

--- a/ToDo.FrontEnd/Components/Layout/NavBar.razor
+++ b/ToDo.FrontEnd/Components/Layout/NavBar.razor
@@ -1,5 +1,5 @@
-﻿<h3>NavBar</h3>
-
-@code {
-
-}
+<nav class="navbar bg-body-tertiary" data-bs-theme="dark">
+  <div class="container">
+  <a class="navbar-brand" href="#">Things to do...</a>
+  </div>
+</nav>
