We can now delete todos

--- a/ToDo.FrontEnd/Components/Layout/ToDoView.razor
+++ b/ToDo.FrontEnd/Components/Layout/ToDoView.razor
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div>
-    <a href="">Delete</a>
+    <a @onclick="DeleteToDo" @onclick:preventDefault="true">Delete</a>
     <a href="">Edit</a>
   </div>
 </div>
@@ -19,8 +19,13 @@
 
 @code {
   [Parameter] public required ToDo todo { get; set; }
+  [Parameter] public EventCallback<ToDo> OnDelete { get; set; }
 
   private void ToggleComplete() {
     todo.Complete = !todo.Complete;
+  }
+
+  private async Task DeleteToDo() {
+    await OnDelete.InvokeAsync(todo);
   }
 }
