--- a/ToDo.FrontEnd/Components/Layout/ToDoView.razor
+++ b/ToDo.FrontEnd/Components/Layout/ToDoView.razor
@@ -1,4 +1,5 @@
 ﻿
+@using Humanizer
 @using Models
 @rendermode InteractiveServer
 
@@ -10,6 +11,7 @@
       <p>@todo.Description</p>
     </div>
   </div>
+  <p>@todo.CreatedAt.Humanize()</p>
   <div>
     <a @onclick="DeleteToDo" @onclick:preventDefault="true">Delete</a>
     <a href="">Edit</a>
