--- a/ToDo.FrontEnd/Components/App.razor
+++ b/ToDo.FrontEnd/Components/App.razor
@@ -11,7 +11,7 @@
   <HeadOutlet />
 </head>
 
-<body>
+<body class="bg-dark">
   <Routes />
   <script src="_framework/blazor.web.js"></script>
 </body>
