--- a/ToDo.FrontEnd/Components/Layout/ToDoView.razor.css
+++ b/ToDo.FrontEnd/Components/Layout/ToDoView.razor.css
@@ -21,7 +21,11 @@
     text-decoration: line-through;
     color: #929292;
 }
+tbody .hoverable {
+    transition: transform 0.1s ease-in-out;
+}
 
 .hoverable:hover {
     transform: scale(102%);
+    filter: brightness(110%);
 }
