--- a/ToDo.FrontEnd/Components/_Imports.razor
+++ b/ToDo.FrontEnd/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using ToDo.FrontEnd
 @using ToDo.FrontEnd.Components
+@using ToDo.FrontEnd.Models
+@using ToDo.FrontEnd.Clients
+@using ToDo.FrontEnd.Components.Layout
