Changed tasks data structure from Models.Task[] array into a list List<Models.Task> to be able to add more tasks into the list.

--- a/ToDo.FrontEnd/Components/Pages/EditToDo.razor
+++ b/ToDo.FrontEnd/Components/Pages/EditToDo.razor
@@ -33,7 +33,7 @@
   };
 
     private TasksClient tasksClient = new TasksClient();
-    private Models.Task[]? tasks;
+    private List<Models.Task>? tasks;
 
     protected override void OnInitialized()
     {
