--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -32,7 +32,7 @@
 
 @code {
     private TasksClient client = new();
-    private Models.Task[]? tasks;
+    private List<Models.Task>? tasks;
 
     protected override void OnInitialized()
     {
