Added navigation to add a new task.

--- a/ToDo.FrontEnd/Components/Layout/NavBar.razor
+++ b/ToDo.FrontEnd/Components/Layout/NavBar.razor
@@ -1,5 +1,9 @@
 <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
   <div class="container">
-  <a class="navbar-brand" href="#">Things to do...</a>
+  <a class="navbar-brand" href="/"><h3>Your tasks</h3></a>
+  <div>
+    <a class="btn btn-success" role="button" href="/">Task View</a>
+    <a class="btn btn-success" role="button" href="/edittask">Add a new task?</a>
+  </div>
   </div>
 </nav>
