--- a/ToDo.FrontEnd/Components/Layout/NavBar.razor
+++ b/ToDo.FrontEnd/Components/Layout/NavBar.razor
@@ -1,9 +1,7 @@
-<nav class="navbar bg-body-tertiary" data-bs-theme="dark">
-  <div class="container">
+<nav class="d-flex flex-row bg-success text-white justify-content-between px-5 py-3 mb-4">
   <a class="navbar-brand" href="/"><h3>Your tasks</h3></a>
   <div>
     <a class="btn btn-success" role="button" href="/">Task View</a>
     <a class="btn btn-success" role="button" href="/edittask">Add a new task?</a>
-  </div>
   </div>
 </nav>
