--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor
@@ -5,7 +5,7 @@
 <tr id="task_@(task.Id)" class="hoverable">
   <th scope="row">@task.Id</th>
   <td>@task.Title</td>
-  <td>@task.AbbreviateDescription()</td>
+  <td class="abbreviate_text">@task.Description</td>
   <td class="@GetBackgroundColor()">@task.Priority</td>
   <td><span>@task.CreatedAt.Humanize()</span></td>
   <td></td>
