--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor.css
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor.css
@@ -25,6 +25,16 @@ tbody .hoverable {
     transition: transform 0.1s ease-in-out;
 }
 
+.abbreviate_text {
+    max-width: 15rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.abbreviate_text:hover {
+    white-space: wrap;
+    overflow: scroll;
+}
 .hoverable:hover {
     transform: scale(102%);
     filter: brightness(110%);
