--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -1,32 +1,34 @@
 ﻿@page "/"
 @rendermode InteractiveServer
 
-<div class="px-3">
-<PageTitle>Todo List</PageTitle>
-  <table class="table table-bordered table-dark">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col" class="bg-primary">Task ID</th>
-        <th scope="col" class="bg-primary">Name</th>
-        <th scope="col" class="bg-primary">Description</th>
-        <th scope="col" class="bg-primary">Priority</th>
-        <th scope="col" class="bg-primary">Created At</th>
-        <th scope="col" class="bg-primary">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      @if(tasks is null) {
-        <p>Loading...</p>
-      } else {
-        @foreach (var task in tasks)
-        {
-          <TaskView
-            task="@task"
-          />
+<div class="row px-4 justify-content-center">
+  <div class="px-3 col-md-6 center">
+  <PageTitle>Todo List</PageTitle>
+    <table class="table table-bordered table-dark">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col" class="bg-primary">Task ID</th>
+          <th scope="col" class="bg-primary">Name</th>
+          <th scope="col" class="bg-primary">Description</th>
+          <th scope="col" class="bg-primary">Priority</th>
+          <th scope="col" class="bg-primary">Created At</th>
+          <th scope="col" class="bg-primary">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        @if(tasks is null) {
+          <p>Loading...</p>
+        } else {
+          @foreach (var task in tasks)
+          {
+            <TaskView
+              task="@task"
+            />
+          }
         }
-      }
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 @code {
