Changed Name on tasks table to Title.

--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -8,7 +8,7 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col" class="bg-primary">Task ID</th>
-          <th scope="col" class="bg-primary">Name</th>
+          <th scope="col" class="bg-primary">Title</th>
           <th scope="col" class="bg-primary">Description</th>
           <th scope="col" class="bg-primary">Priority</th>
           <th scope="col" class="bg-primary">Created At</th>
