--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject TasksClient Client
 @rendermode InteractiveServer
 
 <div class="row px-4 justify-content-center">
@@ -32,12 +33,11 @@
 </div>
 
 @code {
-    private TasksClient client = new();
     private List<Models.Task>? tasks;
 
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        tasks = client.GetTasks();
+        tasks = Client.GetTasks();
     }
 }
