Added option to sort tasks based on priority.

--- a/ToDo.FrontEnd/Components/Pages/EditTask.razor
+++ b/ToDo.FrontEnd/Components/Pages/EditTask.razor
@@ -35,7 +35,8 @@
   [SupplyParameterFromForm]
   private Models.Task task { get; set; } = new()
   {
-    Title = ""
+    Title = "",
+    Priority = ""
   };
 
   private List<Models.Task>? tasks;
