--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -38,6 +38,6 @@
     protected override void OnInitialized()
     {
         base.OnInitialized();
-        tasks = Client.GetTasks();
+        tasks = Client.GetTasksByPriority();
     }
 }
