Added actions to tasks. And added a completion toggle.

--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -9,12 +9,12 @@
   <table class="table table-bordered table-dark">
     <thead class="thead-dark">
       <tr>
-        <th scope="col" class="bg-primary">Task ID</th>
-        <th scope="col" class="bg-primary">Title</th>
-        <th scope="col" class="bg-primary">Description</th>
-        <th scope="col" class="bg-primary">Priority</th>
-        <th scope="col" class="bg-primary">Created At</th>
-        <th scope="col" class="bg-primary">Actions</th>
+        <th scope="col" class="bg-primary text-center align-middle">Task ID</th>
+        <th scope="col" class="bg-primary text-center align-middle">Title</th>
+        <th scope="col" class="bg-primary text-center align-middle">Description</th>
+        <th scope="col" class="bg-primary text-center align-middle">Priority</th>
+        <th scope="col" class="bg-primary text-center align-middle">Created At</th>
+        <th scope="col" class="bg-primary text-center align-middle">Actions</th>
       </tr>
     </thead>
     <tbody>
