--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor
@@ -6,9 +6,15 @@
   <th scope="row">@task.Id</th>
   <td>@task.Title</td>
   <td class="abbreviate_text">@task.Description</td>
-  <td class="@GetBackgroundColor()">@task.Priority</td>
+  <td class="@GetBackgroundColor() text-center align-middle fw-bold">@task.Priority</td>
   <td><span>@task.CreatedAt.Humanize()</span></td>
-  <td></td>
+  <td>
+    <button @onclick="ToggleComplete" class="btn @(task.Complete ? "bg-success" : "bg-secondary") text-white w-100 mb-1">
+       @(task.Complete ? "Done" : "Awaiting")
+    </button>
+    <button class="btn bg-warning text-white w-100 mb-1">Edit</button>
+    <button class="btn bg-danger text-white w-100">Delete</button>
+  </td>
 </tr>
 
 @code {
@@ -16,6 +22,7 @@
   
   private void ToggleComplete() {
     task.Complete = !task.Complete;
+
   }
 
   private string GetBackgroundColor() {
