--- a/ToDo.FrontEnd/Components/Pages/EditTask.razor
+++ b/ToDo.FrontEnd/Components/Pages/EditTask.razor
@@ -11,6 +11,7 @@
       <DataAnnotationsValidator />
       <div class="mb-3">
         <InputText id="title" placeholder="Title" @bind-Value="task.Title" class="form-control bg-dark text-white" />
+        <ValidationMessage For="() => task.Title"/>
       </div>
       <div class="mb-3">
         <InputTextArea id="description" placeholder="description" @bind-Value="task.Description"
@@ -23,6 +24,7 @@
           <option class="bg-warning" value="Medium">Medium</option>
           <option class="bg-success" value="Low">Low</option>
         </InputSelect>
+        <ValidationMessage For="() => task.Priority"/>
       </div>
       <div class="d-flex flex-row gap-1">
         <a class="btn btn-danger w-25" role="button" href="/">Cancel</a>
