Showing the edit page with task data.

--- a/ToDo.FrontEnd/Components/Layout/NavBar.razor
+++ b/ToDo.FrontEnd/Components/Layout/NavBar.razor
@@ -2,6 +2,6 @@
   <a class="navbar-brand" href="/"><h3>Your tasks</h3></a>
   <div>
     <a class="btn btn-success" role="button" href="/">Task View</a>
-    <a class="btn btn-success" role="button" href="/edittask">Add a new task?</a>
+    <a class="btn btn-success" role="button" href="/task_form/new">Add a new task?</a>
   </div>
 </nav>
