Updated the column sizes.

--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -3,17 +3,17 @@
 @rendermode InteractiveServer
 
 <div class="row px-4 justify-content-center">
-  <div class="px-3 col-md-6 center">
+  <div class="px-3  center">
   <PageTitle>Todo List</PageTitle>
   <button @onclick="sortTasks" class="btn bg-primary text-white mb-1">@(reverseByPriority ? "Low to High Priority" : "High to Low Priority")</button>
   <table class="table table-bordered table-dark">
     <thead class="thead-dark">
       <tr>
-        <th scope="col" class="bg-primary text-center align-middle">Title</th>
-        <th scope="col" class="bg-primary text-center align-middle">Description</th>
+        <th scope="col" class="bg-primary text-center w-25 align-middle">Title</th>
+        <th scope="col" class="bg-primary text-center w-50 align-middle">Description</th>
         <th scope="col" class="bg-primary text-center align-middle">Priority</th>
         <th scope="col" class="bg-primary text-center align-middle">Created</th>
-        <th scope="col" class="bg-primary text-center align-middle">Actions</th>
+        <th scope="col" class="bg-primary text-center w-25 align-middle">Actions</th>
       </tr>
     </thead>
     <tbody>
