--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -67,7 +67,11 @@
 
   private void HandleSubmit() 
   {
-    TasksClient.AddTask(task);
+    if (Task_Id.HasValue) {
+      TasksClient.UpdateTask(task);
+    } else {
+      TasksClient.AddTask(task);
+    }
     NavigationManager.NavigateTo("/");
   }
 }
