--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -6,7 +6,7 @@
 <PageTitle>@pageTitle</PageTitle>
 
 <div class="row px-4 justify-content-center">
-  <div class="col-md-3 center">
+  <div class="col-md-5 center">
     <h3>@pageTitle</h3> 
     <EditForm Model="@task" FormName="editTask" OnValidSubmit="HandleSubmit">
       <DataAnnotationsValidator />
@@ -43,26 +43,29 @@
   public int? Task_Id { get; set; }
 
   [SupplyParameterFromForm]
-  private Models.Task task { get; set; } = new()
-  {
-    Title = "",
-    Priority = ""
-  };
+  private Models.Task? task { get; set; }
+
   private List<Models.Task>? tasks;
   private string pageTitle;
+
+  protected override void OnParametersSet()
+  {
+    if (Task_Id is not null) 
+    {
+      task = TasksClient.GetTaskById(Task_Id.Value);
+    } else {
+      task = new()
+      {
+        Title = "",
+        Priority = ""
+      };
+    }
+  }
 
   protected override void OnInitialized()
   {
     pageTitle = Task_Id.HasValue ? "Edit Task" : "New Task";
     tasks = TasksClient.GetTasks();
-    if (Task_Id.HasValue) {
-      var existingTask = TasksClient.GetTaskById(Task_Id.Value);
-      if (existingTask is not null) {
-        task = existingTask;
-      } else {
-        NavigationManager.NavigateTo("/");
-      }
-    }
   }
 
   private void HandleSubmit() 
