--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor
@@ -8,11 +8,11 @@
   <td class="@GetBackgroundColor() text-center align-middle fw-bold">@task.Priority</td>
   <td><span>@task.CreatedAt.Humanize()</span></td>
   <td>
-    <button @onclick="ToggleComplete" class="btn @(task.Complete ? "bg-success" : "bg-secondary") text-white w-100 mb-1">
+    <button @onclick="ToggleComplete" class="hoverable btn @(task.Complete ? "bg-success" : "bg-secondary") text-white w-100 mb-1">
        @(task.Complete ? "Completed "+task.CompletedAt.Humanize() : "Awaiting")
     </button>
-    <a href="task_form/@(task.Id)" class="btn bg-warning text-white w-100 mb-1">Edit</a>
-    <button @onclick="HandleTaskDeletion" class="btn bg-danger text-white w-100">Delete</button>
+    <a href="task_form/@(task.Id)" class="hoverable btn bg-warning text-black w-100 mb-1">Edit</a>
+    <button @onclick="HandleTaskDeletion" class="hoverable btn bg-danger text-white w-100">Delete</button>
   </td>
 </tr>
 
