--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor
@@ -5,7 +5,7 @@
 <tr id="task_@(task.Id)" class="hoverable">
   <td>@task.Title</td>
   <td class="abbreviate_text">@task.Description</td>
-  <td class="@GetBackgroundColor() text-center align-middle fw-bold">@task.Priority</td>
+  <td class="@GetBackgroundColor() text-center align-middle fw-bold">@task.Priority.Value</td>
   <td><span>@task.CreatedAt.Humanize()</span></td>
   <td>
     <button @onclick="ToggleComplete" class="hoverable btn @(task.Complete ? "bg-success" : "bg-secondary") text-white w-100 mb-1">
@@ -30,7 +30,7 @@
   }
 
   private string GetBackgroundColor() {
-    switch(task.Priority) {
+    switch(task.Priority.Value) {
       case "High":
         return "bg-danger";
       case "Medium":
