--- a/ToDo.FrontEnd/Components/Layout/TaskView.razor
+++ b/ToDo.FrontEnd/Components/Layout/TaskView.razor
@@ -7,12 +7,11 @@
   <td class="abbreviate_text">@task.Description</td>
   <td class="@GetBackgroundColor() text-center align-middle fw-bold">@task.Priority.Value</td>
   <td><span>@task.CreatedAt.Humanize()</span></td>
-  <td>
-    <button @onclick="ToggleComplete" class="hoverable btn @(task.Complete ? "bg-success" : "bg-secondary") text-white w-100 mb-1">
-       @(task.Complete ? "Completed "+task.CompletedAt.Humanize() : "Awaiting")
+  <td class="">
+    <button @onclick="ToggleComplete" class="fs-2 hoverable m-1 btn bi @(task.Complete ? "bg-success bi-check2-circle" : "bg-secondary bi-hourglass-split") text-white ">
     </button>
-    <a href="task_form/@(task.Id)" class="hoverable btn bg-warning text-black w-100 mb-1">Edit</a>
-    <button @onclick="HandleTaskDeletion" class="hoverable btn bg-danger text-white w-100">Delete</button>
+    <a href="task_form/@(task.Id)" class="fs-2 hoverable m-1 bi bi-pencil-fill text-white bg-primary btn"></a>
+    <button @onclick="HandleTaskDeletion" class="fs-2 hoverable m-1 bi bi-trash3-fill btn bg-danger text-white"></button>
   </td>
 </tr>
 
