Fixed the bug of overwriting multiple tasks, if the task ID was 1

--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -65,7 +65,7 @@
       task = new()
           {
             Title = "",
-            Priority = new Priority{Value=""}
+            Priority = new Priority{Value="High"}
           };
     }
   }
